# py-qua-tools

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: create-release.yml  on-prerelease.yml  on-pull-request.yml  on-released.yml
.run/: format.run.xml  link.run.xml  lint.run.xml  test against server.run.xml  test.run.xml
active_reset_full/: IQ_blobs.py  README.md  compare_reset.py  configuration.py  macros.py
discriminator_gui/: discriminator_gui.py
docs/: baking.rst  conf.py  configBuilder.rst  index.rst  intro.md
examples/: test_video_mode.py  two_qubit_rb.py
examples/Callable_from_qua/: README.md  calibration_db.json  configuration.py  configuration_octave.py  qua_print.py  set_octave.py  test_debug.py  test_feedback.py  test_from_python_to_qua.py  test_from_python_to_qua_inputstreams.py  test_live_plot.py  test_qua_for.py  test_wide_spec.py
examples/Qcodes_drivers/: README.md
examples/callable_from_qua/: feedback_on_external_instrument.py  qua_print.py  update_other_instruments.py
examples/live_mode/: PID_example.py  README.md  basic_example.py  configuration.py  notebook_example.ipynb
examples/video_mode/: PID_example.py  README.md  basic_example.py  configuration.py  notebook_example.ipynb  test.ipynb  test_PID.py  test_user_input.py  test_user_input.py~small adustments  videomode.md
joe_testing/: active_reset.py  configuration.py  example_reset_comparison.py  macros.py  reset_data_collection.py
joe_testing_active_reset/: active_reset_data_generator.py  active_reset_gui.py  active_reset_gui_old.py  basic_program.py  build_active_reset_program.py  configuration.py  fake_data.py  sample_generator.py  t1_basic.py  t1_cycle_simulator.py
joe_testing_discriminator/: fake_iq_data.py  joe_testing_discriminator.py
niv_plotter/: example.py  grid_gui.py  grid_gui_class.py  gui.py  interacive.py  main.py  mp.py  mp_gui.py  test.py  testing.py  testing_mp.py  widget.py
niv_plotter/gui/: grid_gui.py  widget.py
qualang_tools/: InteractivePlotLib.py  InteractivePlotLib_example.py  __init__.py  filter_tools.py  simulator_tools.py
qualang_tools/ControlPanel/: ControlPanel.py  __init__.py
qualang_tools/Interactive_plt/: Example.py  Fitting.py  Fitting_example.py  Fitting_functions.py  Interactive_plt.py  README.md  __init__.py  data_fit_linear_data.json  fit_decay_sine.py  fit_linear.py  fit_phase_resonator_spectroscopy.py  fit_reflection_resonator_spectroscopy.py  fit_transmission_resonator_spectroscopy.py
qualang_tools/QuaConfig/: QuaConfig.py  __init__.py
qualang_tools/addons/: InteractivePlotLib.py  README.md  variables.py
qualang_tools/analysis/: README.md  __init__.py  dataPresenter.py  discriminator.py  exampleLoaderTemplate_generic.py  independent_multi_qubit_discriminator.py  mpltest.py  multi_qubit_discriminator.py  results_dataclass.py  tabbed_widget.py  viewer.py
qualang_tools/bakery/: README.md  __init__.py  bakery.py  randomized_benchmark.py  randomized_benchmark_c1.py  readme.md  xeb.py
qualang_tools/callable_from_qua/: __init__.py  _callable_from_qua.py  _qua_patches.py  callable_from_qua.py  readme.md
qualang_tools/characterization/: README.md
qualang_tools/config/: README.md  README_IIR_filters.md  README_config_GUI.md  README_config_builder.md  README_helper_tools.md  README_integration_weights_tools.md  README_waveform_tools.md  __init__.py  builder.py  components.py  configuration.py  digital_filters_IIR.py  exceptions.py  gui.py  helper_tools.py  integration_weights_tools.py  intrument_limits.py  parameters.py  primitive_components.py  readme.md  simulator_tools.py  waveform_tools.py
qualang_tools/config_tools/: __init__.py  integration_weights_tools.py
qualang_tools/control_panel/: ControlPanel.py  README.md  README_manual_output_control.md  README_vna.md  __init__.py  control_panel.py  element_trigger.py  gui.py  manual_output_control.py  testmanualcontrol.ipynb  vna.py
qualang_tools/digital_filters/: README.md  README_FIR_filters.md  README_IIR_filters.md  __init__.py  digital_filters_iir.py  filters.py  fir_filters_fit.py
qualang_tools/element_triggers/: configuration.py  element_trigger.py
qualang_tools/experimental/: README.md
qualang_tools/live_mode/: README.md  __init__.py  livemode.py
qualang_tools/loops/: README.md  __init__.py  loops.py  qua_iterable_postprocess.py
qualang_tools/macros/: README.md  __init__.py  long_wait.py
qualang_tools/multi_user/: README.md  __init__.py  multi_user_tools.py
qualang_tools/octave_tools/: README.md  __init__.py  calibration_db.json  calibration_result_plotter.py  configuration.py  octave_tools.py  test.py  test2.py  testSA.py
qualang_tools/optimal_weights/: README.md  StateDiscriminator.py  TimeDiffCalibrator.py  TwoStateDiscriminator.py  TwoStateDiscriminator_alpha.py  configuration.py  configuration_ir_mixer.py  ge_disc_params_rr1a.npz  ge_discriminator_train_n_benchmark.py  simulation.py  usage.py  usage_ir_mixer.py
qualang_tools/parameter_table/: README.md  __init__.py  parameter_table.py  parameter_value.py
qualang_tools/plot/: README.md  __init__.py  active_reset_gui.py  discriminator_gui.py  example.py  fitting.py  plot.py  test.py  video_mode.py
tests/: IQblobs.npy  c1_ops.npy  c1_table.npy  calib_res.pkl  calibration_db.json  conftest.py  iw1_cos1.npy  measured data  test_analysis.py  test_bakery.py  test_calibration_result_plotter.py  test_config_builder.py  test_config_gui.py  test_config_helper_tools.py  test_control_panel.py  test_digital_filters.py  test_fittinig_class.py  test_integration_weights_tools.py  test_livemode.py  test_loops.py  test_octave_tools.py  test_simulator_tools.py  test_split_frequency_sweep.py  test_time_units.py  test_videomode.py  test_waveform_tools.py
tests_against_server/: .qm_config.example.toml  conftest.py  ge_disc_params_rr1a.npz  test_bakery_server.py  test_digital_filters_server.py  test_long_wait.py  test_loops.py  test_multi_user.py  test_opt_weigths_server.py  test_voltage_gate_sequence.py
(+432 files in other folders)
